--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -4,6 +4,11 @@ layout: default
 
 <article>
 
+  {% page.content %}	
+  
 </article>
+
+<footer><a class="ghost" href="{{ page.url | relative_url }}">read more »</a></footer>
+
 
 
