--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,8 +27,9 @@
   {% unless site.hide_title %}<h1><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h1>{% endunless %}
   {% if site.navigation %}<nav>{% for path in site.navigation %}{% assign node = site.pages | where: "name", path | first %}<a href="{{ node.url | relative_url }}">{{ node.title }}</a>{% endfor %}</nav>{% endif %}
   <nav>
-    {% if site.icons %}{% for link in site.icons %}<a class="icon" style="font-size: 1.7em;" href="{{ link[1] }}{{page.path}}" target="_blank"><svg><use xlink:href="{{ "/assets/fontawesome/icons.svg" | relative_url }}#{{ link[0] }}"></use></svg></a>{% endfor %}{% endif %}
+    {% if site.icons %}{% for link in site.icons %}<a class="icon" style="font-size: 1.7em;" href="{{ link[1] }}{{page.path}}" target="_blank"><svg><use xlink:href="https://raw.githubusercontent.com/Nonprofit-Open-Data-Collective/machine_learning_mission_codes/master/docs/assets/images/robot-with-big-head_icon-icons.com_55270.ico"></use></svg></a>{% endfor %}{% endif %}
   </nav> 
 </header>
 
 {{ content }}
+
